sources/dashboard_csn_front/deployment/uat/kube-config/gdos_front_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gdos-front-service
spec:
  selector:
    app: gdos-front
  ports:
    - port: 80
